--- a/styleForm.css
+++ b/styleForm.css
@@ -1,11 +1,27 @@
 form {
     justify-content: center;
 }
+
+
 .slidecontainer {
     width: 100%;
   }
 
-  #closeButton {
+  #retry, #home{
+    font-family: 'Do Hyeon', sans-serif;
+    color: white;
+    border-radius: 40px;
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: blueviolet;
+    font-size: 40px;
+    margin: 5px;
+    box-shadow: 
+    inset 0 -4px 1px #42a4ff,
+    inset 0 4px 1px #ee38ff;
+  }
+
+  #closeButton{
     font-family: 'Do Hyeon', sans-serif;
     color: white;
     border-radius: 40px;
@@ -49,7 +65,7 @@ form {
     cursor: pointer;
   }
 
-.overlay {
+.overlay, .overlay-win_state {
   height: 100%;
   width: 0;
   position: fixed;
@@ -62,6 +78,18 @@ form {
   transition: 0.5s;
 }
 
+.overlay-win_state {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(3, 128, 185);
+  background-color: rgba(30, 103, 185, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
 #settingsPage{
     font-family: 'Righteous', cursive;
     font-size: 65px;
