--- a/styleForm.css
+++ b/styleForm.css
@@ -2,6 +2,9 @@ form {
     justify-content: center;
 }
 
+#home_retry_buttons {
+  justify-content: center;
+}
 
 .slidecontainer {
     width: 100%;
@@ -65,7 +68,7 @@ form {
     cursor: pointer;
   }
 
-.overlay, .overlay-win_state {
+.overlay {
   height: 100%;
   width: 0;
   position: fixed;
