--- a/size.css
+++ b/size.css
@@ -24,6 +24,10 @@
         font-size: 50px;
     }
 
+    h1 {
+        font-size: 50px;  
+    }
+
     #back {
         position: relative;
         top: 50%;
