--- a/plushyPink.css
+++ b/plushyPink.css
@@ -55,14 +55,19 @@ h1 {
     font-family: 'Fredoka One', cursive;
     font-size: 90px;
     text-align: center;
-    left: 50%;
-    transform: translate(-50%, -50%);  
      -webkit-text-fill-color: white;
      -webkit-text-stroke-width: 1.4px;
      -webkit-text-stroke-color:#ff42c6;
      background: -webkit-linear-gradient(#eee,rgb(255, 242, 245),rgb(255, 219, 226),  #fea1ff);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
+}
+
+#winMessage {
+    font-size: 95px;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);  
 }
 
 h2 {
@@ -108,25 +113,6 @@ margin-left: 200px;
 margin-right: 200px;
 }
 
-#circle1, #circle2, #circle3, #circle4, #circle5, #circle6       {
-    position: relative;  
-    bottom: 50px;
-    width: 33px;
-    height: 33px;
-    display: inline-block;
-    border-style: solid;
-    border-color: #ee2db4;
-    background: rgb(228, 103, 180);
-    border-radius: 50%;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-#circle4, #circle5, #circle6 {
-    border-color: #2d70ee;
-    background: rgb(103, 157, 228); 
-}
-
 #scores
 {
     text-align:center;
@@ -146,7 +132,7 @@ a:link {
     margin-top: 15%;
 }
 
-#play, #multiplay, #settings, #back,#nextRound {
+#play, #multiplay, #settings, #back,#nextRound, #retry, #home {
     font-family: 'Fredoka One', cursive;
     color: white;
     border: 2px solid #ee2db4;
@@ -168,7 +154,7 @@ a:link {
 
 
 
-#play:hover, #multiplay:hover, #settings:hover,#back:hover,#nextRound:hover {
+#play:hover, #multiplay:hover, #settings:hover,#back:hover,#nextRound:hover,#retry:hover, #home:hover {
     background-color: #bcdffd; 
     padding-right: 15px;
     padding-left: 15px;
@@ -178,7 +164,7 @@ a:link {
     inset 0 4px 1px #ff71db;
   }
 
-  #play:focus, #multiplay:focus, #settings:focus, #back:focus,#nextRound:focus {
+  #play:focus, #multiplay:focus, #settings:focus, #back:focus, #nextRound:focus, #retry:focus, #home:focus {
     background-color: #46dbdb; 
     padding-right: 15px;
     padding-left: 15px;
@@ -188,6 +174,7 @@ a:link {
     inset 0 4px 1px #ff84ef;
   }
 
+  
 #nextRound{
     position: relative;
     left: 37%;
@@ -203,38 +190,21 @@ body {
     background-size: 100px 100px;
 }
 
-    
-#save {
-    border: 2px solid rgb(146, 13, 255);
-    font-family: 'Righteous', cursive;
-    color: white;
-    border-radius: 40px;
-    padding: 5px;
-    padding-right: 10px;
-    padding-left: 10px;
-    background-color: blueviolet;
-    font-size: 40px;
-    box-shadow: 
-    inset 0 -4px 1px #42a4ff,
-    inset 0 4px 1px #ee38ff;
+#retry{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);  
 }
 
-#save:hover, #closeButton:hover {
-    background-color: #4af020; 
-    padding-right: 15px;
-    padding-left: 15px;
-    color: rgb(0, 0, 0);
-    box-shadow: 
-    inset 0 -4px 1px #7afdfd,
-    inset 0 4px 1px #deff4a;
+#home {
+    position: absolute;
+    left: 50%;
+    top: 62%;
+    transform: translate(-50%, -50%); 
 }
 
-#save:focus, #closeButton:focus {
-    background-color: #46dbdb; 
-    padding-right: 15px;
-    padding-left: 15px;
-    color: rgb(0, 0, 0);
-    box-shadow: 
-    inset 0 -4px 1px #a0ff88,
-    inset 0 4px 1px #84ffd0;
+
+.overlay-win_state {
+    background-color: rgba(152, 195, 252, 0.8);
 }
