--- a/styleForm.css
+++ b/styleForm.css
@@ -2,27 +2,10 @@ form {
     justify-content: center;
 }
 
-#home_retry_buttons {
-  justify-content: center;
-}
-
 .slidecontainer {
     width: 100%;
   }
 
-  #retry, #home{
-    font-family: 'Do Hyeon', sans-serif;
-    color: white;
-    border-radius: 40px;
-    padding-right: 10px;
-    padding-left: 10px;
-    background-color: blueviolet;
-    font-size: 40px;
-    margin: 5px;
-    box-shadow: 
-    inset 0 -4px 1px #42a4ff,
-    inset 0 4px 1px #ee38ff;
-  }
 
   #closeButton{
     font-family: 'Do Hyeon', sans-serif;
@@ -88,8 +71,6 @@ form {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(3, 128, 185);
-  background-color: rgba(30, 103, 185, 0.9);
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -173,4 +154,39 @@ option, select {
   top: 15px;
   right: 35px;
   }
+}
+
+#save {
+  border: 2px solid rgb(146, 13, 255);
+  font-family: 'Righteous', cursive;
+  color: white;
+  border-radius: 40px;
+  padding: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: blueviolet;
+  font-size: 40px;
+  box-shadow: 
+  inset 0 -4px 1px #42a4ff,
+  inset 0 4px 1px #ee38ff;
+}
+
+#save:hover, #closeButton:hover {
+  background-color: #4af020; 
+  padding-right: 15px;
+  padding-left: 15px;
+  color: rgb(0, 0, 0);
+  box-shadow: 
+  inset 0 -4px 1px #7afdfd,
+  inset 0 4px 1px #deff4a;
+}
+
+#save:focus, #closeButton:focus {
+  background-color: #46dbdb; 
+  padding-right: 15px;
+  padding-left: 15px;
+  color: rgb(0, 0, 0);
+  box-shadow: 
+  inset 0 -4px 1px #a0ff88,
+  inset 0 4px 1px #84ffd0;
 }
