--- a/basicBlue.css
+++ b/basicBlue.css
@@ -14,7 +14,7 @@
     transform: translate(-50%, -50%);   
 }
 
-#the_canvas_rival, #the_canvas_stars_rival, #the_canvas_results_rival{
+#the_canvas_rival, #the_canvas_stars_rival, #the_canvas_results_rival, #canvas_stop{
   position: absolute;
   padding-left: 0;
   padding-right: 0;
@@ -27,7 +27,7 @@
   transform: translate(-50%, -50%);         
 }
 
-#the_canvas_results, #the_canvas_stars {
+#the_canvas_results, #the_canvas_stars, #canvas_stop {
   background-color: transparent;
   position: absolute;
   padding-left: 0;
@@ -66,6 +66,7 @@ a:link {
   font-size: 60px;
   text-align: center;
    color: rgb(255, 255, 255);
+   transition: 2s;
 }
 
 h2 {
@@ -116,6 +117,7 @@ margin-right: 200px;
   linear-gradient(to right, #5ba6ec,#3ec4e6);
   font-size: 25px;
   margin: 5px;
+  transition: 0.3s;
 }
 
 
@@ -124,12 +126,14 @@ margin-right: 200px;
   padding-left: 15px;
   background-image:
   linear-gradient(to right, #88c0f5,#72d0e7);
+  transition: 0.3s;
 }
 
 body {
   background-image:
   linear-gradient(to right, #3688d4,#3ec4e6);
   margin:0px; padding:0px; 
+  transition: 2.5s;
 }
 
 audio { display:none;}
@@ -140,17 +144,24 @@ audio { display:none;}
   bottom: 110px;
 }
 
+#score {
+  position: absolute;
+  left: 47%;
+  top: 32%;  
+}
+
+
 #retry{
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 55%;
   transform: translate(-50%, -50%);  
 }
 
 #home {
   position: absolute;
   left: 50%;
-  top: 62%;
+  top: 67%;
   transform: translate(-50%, -50%); 
 }
 
