--- a/perfectPurple.css
+++ b/perfectPurple.css
@@ -21,7 +21,7 @@
 }
 
 
-#the_canvas_results, #the_canvas_stars {
+#the_canvas_results, #the_canvas_stars, #canvas_stop{
     background-color: transparent;
     position: absolute;
     padding-left: 0;
@@ -34,6 +34,7 @@
     left: 40%;
     transform: translate(-50%, -50%);        
 }
+
 
 
 
@@ -57,12 +58,13 @@ h1 {
     font-size: 80px;
     text-align: center;
      color: rgb(255, 255, 255);
+     transition: 2s;
 }
 
 h2 {
     position: relative;  
     bottom: 50px;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Righteous', cursive;
     font-size: 70px;
     text-align: center;
      -webkit-text-fill-color: white;
@@ -76,7 +78,7 @@ h2 {
 
 h3 {
     font-weight: 3000;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Righteous', cursive;
     font-size: 50px;
     text-align: center;
      -webkit-text-fill-color: white;
@@ -155,6 +157,7 @@ a:link {
     box-shadow: 
     inset 0 -4px 1px #42a4ff,
     inset 0 4px 1px #ee38ff;
+    transition: 0.3s;
 }
 
 
@@ -170,13 +173,15 @@ a:link {
     
 }
 
-
+#score {
+    bottom: 5%;  
+}
 
  #retry{
     position: absolute;
     padding:10px;
     left: 50%;
-    top: 45%;
+    top: 55%;
     transform: translate(-50%, -50%);  
 }
 
@@ -184,7 +189,7 @@ a:link {
     position: absolute;
     padding:10px;
     left: 50%;
-    top: 57%;
+    top: 67%;
     transform: translate(-50%, -50%); 
 }
 
@@ -211,6 +216,7 @@ a:link {
     box-shadow: 
     inset 0 -4px 1px #7afdfd,
     inset 0 4px 1px #deff4a;
+    transition: 0.3s;
   }
 
   #play:focus, #multiplay:focus, #settings:focus, #back:focus, #nextRound:focus,#retry:focus, #home:focus {
@@ -230,6 +236,7 @@ body {
 background-color: #ffffff;
 background-position: 0 0, 50px 50px;
 background-size: 100px 100px;
+transition: 2.5s;
 }
 
 #save {
