--- a/plushyPink.css
+++ b/plushyPink.css
@@ -14,7 +14,7 @@
     transform: translate(-50%, -50%);         
 }
 
-#the_canvas_rival, #the_canvas_stars_rival, #the_canvas_results_rival{
+#the_canvas_rival, #the_canvas_stars_rival, #the_canvas_results_rival, #canvas_stop{
     position: absolute;
     padding-left: 0;
     padding-right: 0;
@@ -33,7 +33,7 @@
 }
 
 
-#the_canvas_results, #the_canvas_stars {
+#the_canvas_results, #the_canvas_stars, #canvas_stop {
     background-color: transparent;
     position: absolute;
     padding-left: 0;
@@ -61,6 +61,7 @@ h1 {
      background: -webkit-linear-gradient(#eee,rgb(255, 242, 245),rgb(255, 219, 226),  #fea1ff);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
+     transition: 2s;
 }
 
 #winMessage {
@@ -130,6 +131,7 @@ a:link {
 
 #homepageElements {
     margin-top: 15%;
+    transition: 0.6s;
 }
 
 #play, #multiplay, #settings, #back,#nextRound, #retry, #home {
@@ -150,6 +152,7 @@ a:link {
     box-shadow: 
     inset 0 -4px 1px #ff81e4,
     inset 0 4px 1px #34c5ff;
+    transition: 0.3s;
 }
 
 
@@ -162,6 +165,7 @@ a:link {
     box-shadow: 
     inset 0 -4px 1px #7afdfd,
     inset 0 4px 1px #ff71db;
+    transition: 0.3s;
   }
 
   #play:focus, #multiplay:focus, #settings:focus, #back:focus, #nextRound:focus, #retry:focus, #home:focus {
@@ -188,21 +192,30 @@ body {
     background-color: #ffffff;
     background-position: 0 0, 50px 50px;
     background-size: 100px 100px;
+    transition: 2.5s;
 }
 
-#retry{
+#score {
+    position: absolute;
+    left: 47%;
+    top: 28%;  
+  }
+  
+  
+  #retry{
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 58%;
     transform: translate(-50%, -50%);  
-}
-
-#home {
+  }
+  
+  #home {
     position: absolute;
     left: 50%;
-    top: 62%;
+    top: 70%;
     transform: translate(-50%, -50%); 
-}
+  }
+  
 
 
 .overlay-win_state {
