--- a/size.css
+++ b/size.css
@@ -1,6 +1,17 @@
 @media only screen and (max-width: 500px) {
    
-    
+    #buttons {
+        display: block;
+        justify-content: center;
+    }
+
+    #play, #multiplay, #settings {
+        display: block;
+        font-size: 13px;
+        padding: 3px;
+    }
+   
+   
     body {
         margin: 0%;
         padding: 0%;
@@ -26,6 +37,10 @@
 
     h1 {
         font-size: 50px;  
+    }
+
+    #rsptitle {
+        font-size: 30px; 
     }
 
     #back {
