--- a/styleForm.css
+++ b/styleForm.css
@@ -68,10 +68,9 @@ form {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
   top: 0;
-  left: 0;
-  overflow-x: hidden;
+  right: 0;
+  overflow-y: hidden;
   transition: 0.5s;
 }
 #settingsPage{
