--- a/plushyPink.css
+++ b/plushyPink.css
@@ -121,14 +121,7 @@ margin-right: 200px;
     bottom: 170px;
 }
 
-@media only screen and (max-width: 500px) {
-    #scores
-    {
-        font-size: 60px;
-        top: 8%;  
-        right: 200%;
-    }
-}
+    
 
 a:link { 
     text-decoration: none;}
@@ -229,4 +222,105 @@ body {
 
 .overlay-win_state {
     background-color: rgba(152, 195, 252, 0.8);
+}
+
+
+@media only screen and (max-width: 500px) {
+   
+    #buttons {
+        display: block;
+    }
+
+    #play, #multiplay, #settings {
+        left: 25%;
+        align-items: center;
+        display: block;
+        font-size: 35px;
+        margin-bottom: 38px;
+    }
+   
+   
+    body {
+        margin: 0%;
+        padding: 0%;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    #the_canvas,#the_canvas_results, #the_canvas_stars {
+        position: absolute;
+       left: 50%;
+       top: 37%;
+       width: 90%; 
+    }
+
+    #the_canvas_rival, #the_canvas_stars_rival, #the_canvas_results_rival{
+        position: absolute;
+        left: 70%;
+        top: 78%;
+        width: 190px; 
+    }
+
+    h2 {
+        font-size: 50px;
+    }
+
+    h1 {
+        font-size: 60px; 
+        word-break: break-all;
+    }
+
+    #rsptitle {
+        font-size: 30px; 
+    }
+
+    #back {
+        position: relative;
+        top: 50%;
+    }
+
+
+    #nextRound {
+        font-size: 23px;
+        top: -440px;
+        left: 150px;
+    }
+
+    #winMessage {
+        position: absolute;
+        font-size: 70px;
+        left: 33%;
+        top: 36%;
+    }
+    
+    #score {
+        position: absolute;
+        font-size: 60px;
+        top: 21%;  
+        left: 26%;
+    }
+    
+     #retry{
+        position: absolute;
+        padding:10px;
+        left: 33%;
+        top: 40%;
+        transform: translate(-50%, -50%);  
+    }
+    
+    #home {
+        position: absolute;
+        padding:10px;
+        left: 33%;
+        top: 48%;
+        transform: translate(-50%, -50%); 
+    }
+    
+    #enemyName {
+        position: absolute;
+        font-size: 40px;
+        left: 3%;
+        top: 300%; 
+    }
+
 }
