--- a/plushyPink.css
+++ b/plushyPink.css
@@ -247,7 +247,7 @@ body {
         margin-right: 0%;
     }
 
-    #the_canvas,#the_canvas_results, #the_canvas_stars {
+    #the_canvas,#the_canvas_results, #the_canvas_stars, #canvas_stop {
         position: absolute;
        left: 50%;
        top: 37%;
@@ -281,9 +281,10 @@ body {
 
 
     #nextRound {
+        position: absolute;
         font-size: 23px;
-        top: -440px;
-        left: 150px;
+        top: 440px;
+        left: 80px;
     }
 
     #winMessage {
