--- a/plushyPink.css
+++ b/plushyPink.css
@@ -50,6 +50,7 @@
 
 audio { display:none;}
 
+@media only screen and (min-width: 500px) {
 h1 {
     font-weight: 3000;
     font-family: 'Fredoka One', cursive;
@@ -62,6 +63,7 @@ h1 {
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      transition: 2s;
+}
 }
 
 #winMessage {
@@ -289,6 +291,11 @@ body {
     h1 {
         font-size: 60px; 
         word-break: break-all;
+        font-weight: 3000;
+        font-family: 'Fredoka One', cursive;
+        color: white;
+        text-shadow: 0 0 6px #a81b95;
+        text-align: center;
     }
 
     #rsptitle {
@@ -348,6 +355,14 @@ body {
         position: absolute;
         left: 12%;
         top: 36.5%;
+    }
+
+    #play, #multiplay, #settings, #back,#nextRound, #retry, #home {
+        border: 2px solid #dd41c3;
+        background-color: rgb(243, 93, 218);
+        box-shadow: 
+        inset 0 -4px 1px #fda1e9,
+        inset 0 4px 1px #9fdff8;
     }
 
 }
