--- a/perfectPurple.css
+++ b/perfectPurple.css
@@ -61,6 +61,9 @@ h1 {
      transition: 2s;
 }
 
+@media only screen and (min-width: 500px) {
+   
+
 h2 {
     position: relative;  
     bottom: 50px;
@@ -126,17 +129,37 @@ h3 {
     -webkit-text-fill-color: transparent;
 }
 
-.overlay-win_state {
-    background-color: rgba(145, 248, 27, 0.8);
-}
-
-
 #scores
 {
     text-align:center;
     position: relative;
     bottom: 170px;
 }
+
+#winMessage {
+    font-size: 95px;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);  
+    -webkit-text-stroke-color:#c52ad3;
+    background: -webkit-linear-gradient(#eee,rgb(255, 242, 245),rgb(255, 219, 226),  #fea1ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
+
+#score {
+    bottom: 5%;  
+}
+
+}
+
+.overlay-win_state {
+    background-color: rgba(145, 248, 27, 0.8);
+}
+
+
+
 
 #rpstitle {
     text-shadow:
@@ -182,21 +205,7 @@ a:link {
 }
 
 
-#winMessage {
-    font-size: 95px;
-    left: 50%;
-    top: 20%;
-    transform: translate(-50%, -50%);  
-    -webkit-text-stroke-color:#c52ad3;
-    background: -webkit-linear-gradient(#eee,rgb(255, 242, 245),rgb(255, 219, 226),  #fea1ff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    
-}
 
-#score {
-    bottom: 5%;  
-}
 
  #retry{
     position: absolute;
@@ -396,7 +405,7 @@ transition: 2.5s;
     box-shadow: 
     inset 0 -4px 1px #92caff,
     inset 0 4px 1px #d86ce2;
-    transition: 0.3s;
+    transition: 0.6s;
 }
 
 
@@ -410,32 +419,7 @@ transition: 2.5s;
     linear-gradient(to right, #9dda4e, #9dda4e,#6cc530);
 }
 
-h3 {
-     -webkit-text-fill-color: white;
-     -webkit-text-stroke-width: 1.8px;
-     -webkit-text-stroke-color:rgb(134, 54, 209);
-     background: -webkit-linear-gradient(#eee,rgb(200, 147, 250),rgb(200, 147, 250),  rgb(200, 147, 250));
-     -webkit-background-clip: text;
-     -webkit-text-fill-color: transparent;
-}
 
-h2 {
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 1.8px;
-    -webkit-text-stroke-color:rgb(134, 54, 209);
-    background: -webkit-linear-gradient(#eee,rgb(200, 147, 250),rgb(200, 147, 250),  rgb(200, 147, 250));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#enemyName {
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 1.8px;
-    -webkit-text-stroke-color:#5aa02c;
-    background: -webkit-linear-gradient(#eee,#d1f1bb,#d1f1bb,  #a7e47e);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
 body {
     background-image:
@@ -447,13 +431,54 @@ background-size: 100px 100px;
 transition: 2.5s;
 }
 
+h1, h2, h3, #enemyName, #playerName  {
+    font-size: 60px; 
+    word-break: break-all;
+    font-weight: 3000;
+    font-family: 'Righteous', cursive;
+    color: white;
+    text-shadow: 0 0 6px #9c16d1;
+    text-align: center;
+    transition: 0.6s;
+}
+
+h2 {
+    position: absolute;
+    font-size: 50px;
+    top: -7%;
+    left: 27%;
+}
+
+#enemyName {
+    text-shadow: 0 0 6px #1f9c00;
+}
+
+#enemyName {
+    position: absolute;
+    font-size: 40px;
+    left: 2%;
+    top: 80%; 
+}
+
+#playerName {
+    position: absolute;
+    font-size: 40px;
+    left: 10%;
+    top: 1%; 
+}
+
 #winLoseDraw{
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 0px;
-    -webkit-text-stroke-color:#63168f;
-    background: -webkit-linear-gradient(#eee, #eee);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    font-size: 59px;
+    position: absolute;
+    left: 12%;
+    top: 36.5%;
+}
+
+#winMessage {
+    position: absolute;
+    left: 8%;
+    top: 12%;
+    font-size: 70px;
 }
 
 
