--- a/perfectPurple.css
+++ b/perfectPurple.css
@@ -61,7 +61,7 @@ h1 {
      transition: 2s;
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 700px) {
    
 
 h2 {
@@ -291,7 +291,7 @@ transition: 2.5s;
     top: 34%;
 }
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 700px) {
    
     #buttons {
         display: block;
@@ -364,6 +364,7 @@ transition: 2.5s;
         font-size: 60px;
         top: 25%;  
         left: 39%;
+        text-shadow: 0 0 6px #1f9c00;
     }
     
      #retry{
@@ -398,7 +399,7 @@ transition: 2.5s;
 }
 
 #play, #multiplay, #settings, #back, #nextRound,#retry, #home   {
-    border: 2px solid rgb(104, 39, 158);
+    border: 2px solid rgb(145, 67, 209);
     font-family: 'Righteous', cursive;
     color: white;
     background-color: rgb(134, 54, 209);
@@ -407,6 +408,14 @@ transition: 2.5s;
     inset 0 4px 1px #d86ce2;
     transition: 0.6s;
 }
+
+#back, #nextRound,#retry, #home   {
+    box-shadow: 
+    inset 0 -4px 1px #92caff,
+    inset 0 4px 1px #80e26c;
+    transition: 0.6s;
+}
+
 
 
 #the_canvas {
@@ -429,6 +438,7 @@ background-color: #ffffff;
 background-position: 0 0, 50px 50px;
 background-size: 100px 100px;
 transition: 2.5s;
+
 }
 
 h1, h2, h3, #enemyName, #playerName  {
@@ -478,7 +488,8 @@ h2 {
     position: absolute;
     left: 8%;
     top: 12%;
-    font-size: 70px;
+    font-size: 70px;   
+    text-shadow: 0 0 6px #1f9c00;
 }
 
 
